basic html layout

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             <div class="text">place holder 1</div>
         </div>
     </div>
+    <div class="below-content">
+        <p>Quote</p>
+        <p>Author Name</p>
+    </div>
+    <div class="call-to-action">
+        <div class="sign-up-title">Call to action. It'stime!</div>
+        <div class="sign-up-now">sign up now</div>
+        <div class="button">Sign up</div>
+    </div>
 </body>
     <footer>
         <p>Project: Landing Page 2/2022</p>
