--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="/images/hamster-logo.png" alt=" Hamster Logo">
+    <link rel="stylesheet" href="style.css">
+    <div class="header">
+        <img class="header-logo" src="./images/hamster-logo.png" alt="Hamster Logo">
+        <div class="header-logo-text">Hamster Company</div>
         <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="google.com">header link one</a></li>
+            <li><a href="google.com">header link two</a></li>
+            <li><a href="google.com">header link three</a></li>
         </ul>
-    </header>
+    </div>
     <div class="hero">
         <div class="hero-title">Now offering brand new & used hamsters at a low price</div>
         <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
-        <img src="/images/hamster-pups.jpeg" alt="Multiple Hamsters">
+        <img class="hero-pic" src="./images/hamster-pups.jpeg" alt="Multiple Hamsters">
     </div>
     <div class="content">
         <div class="content-header">Some random information.</div>
@@ -49,9 +51,9 @@
         <div class="button">Sign up</div>
     </div>
 </body>
-    <footer>
+    <div class="footer">
         <p>Project: Landing Page 2/2022</p>
         <p>Author: Eric Chi</p>
-    </footer>
+    </div>
 </body>
 </html>
