added container for hero content

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </ul>
     </div>
     <div class="hero">
-        <div class="hero-title">Now offering brand new & used hamsters at a low price</div>
-        <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
+        <div class="title-container">
+            <div class="hero-title">Hamsters for Sale!</div>
+            <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
+        </div>
         <img class="hero-pic" src="./images/hamster-pups.jpeg" alt="Multiple Hamsters">
     </div>
     <div class="content">
