added images and centered hero content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hamster Co.</title>
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
@@ -21,27 +21,44 @@
         <div class="title-container">
             <div class="hero-title">Hamsters for Sale!</div>
             <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
+            <button class="hero-button">Buy now!</button>
         </div>
         <img class="hero-pic" src="./images/hamster-pups.jpeg" alt="Multiple Hamsters">
     </div>
+    <div class="content-header">Hamsters in Stock</div>
     <div class="content">
-        <div class="content-header">Some random information.</div>
         <div class="info">
-            <img src="" alt="">
-            <div class="text">place holder 1</div>
+            <img class="info-img" src="./images/lychee.png" alt="Picture of a Hamster named Lychee">
+            <div class="text">
+                Name: Lychee <br>
+                Age: 6 months <br>
+                Species: Syrian <br>
+            </div>
         </div>
         <div class="info">
-            <img src="" alt="">
-            <div class="text">place holder 1</div>
+            <img class="info-img" src="./images/peanut.png" alt="Picture of a Hamster named Peanut">
+            <div class="text">
+                Name: Peanut <br>
+                Age: 8 months <br>
+                Species: Golden <br>
+            </div>
         </div>
         <div class="info">
-            <img src="" alt="">
-            <div class="text">place holder 1</div>
+            <img class="info-img" src="./images/dwarfhamster.jpeg" alt="Dwarf Hamster">
+            <div class="text">
+                Name: Marshmellow <br>
+                Age: 3 months <br>
+                Species: Dwarf <br>
+            </div>
         </div>
         <div class="info">
-            <img src="" alt="">
-            <div class="text">place holder 1</div>
-        </div>
+            <img class="info-img" src="./images/longtailhamster.jpeg" alt="Longtail Hamster">
+            <div class="text">
+                Name: Pog <br>
+                Age: 7 months <br>
+                Species: Longtail 
+            </div>
+    </div>
     </div>
     <div class="below-content">
         <p>Quote</p>
