added gender to description and fixed line breaks

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 Name: Lychee <br>
                 Age: 6 months <br>
                 Species: Syrian <br>
+                Gender: Male
             </div>
         </div>
         <div class="info">
@@ -41,6 +42,7 @@
                 Name: Peanut <br>
                 Age: 8 months <br>
                 Species: Golden <br>
+                Gender: Female
             </div>
         </div>
         <div class="info">
@@ -49,6 +51,7 @@
                 Name: Marshmellow <br>
                 Age: 3 months <br>
                 Species: Dwarf <br>
+                Gender: Female
             </div>
         </div>
         <div class="info">
@@ -56,7 +59,8 @@
             <div class="text">
                 Name: Pog <br>
                 Age: 7 months <br>
-                Species: Longtail 
+                Species: Longtail <br>
+                Gender: Male
             </div>
     </div>
     </div>
