--- a/index.html
+++ b/index.html
@@ -65,18 +65,22 @@
     </div>
     </div>
     <div class="below-content">
-        <p>Quote</p>
-        <p>Author Name</p>
+        <div class="quote">This place has the best quality hamsters and the best customer service! I bought many hamsters here and I always love them.</div>
+        <div class="content-name">- A satisfied customer</div>
     </div>
     <div class="call-to-action">
-        <div class="sign-up-title">Call to action. It'stime!</div>
-        <div class="sign-up-now">sign up now</div>
-        <div class="button">Sign up</div>
+        <div class="action-border">
+            <div class="action-container">
+                <div class="sign-up-title">Call to action. It's time!</div>
+                <div class="sign-up-now">sign up now</div>
+            </div>
+                <button class="button">Sign up</button>
+        </div>
     </div>
 </body>
     <div class="footer">
-        <p>Project: Landing Page 2/2022</p>
-        <p>Author: Eric Chi</p>
+        <p>Project: Landing Page 1/30/2022 <br>
+        Author: Eric Chi</p>
     </div>
 </body>
 </html>
