fixed container for hero

--- a/index.html
+++ b/index.html
@@ -1,86 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamster Co.</title>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Hamster Co.</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
-    <div class="header">
-        <img class="header-logo" src="./images/hamster-logo.png" alt="Hamster Logo">
-        <div class="header-logo-text">Hamster Company</div>
-        <ul>
-            <li><a href="google.com">header link one</a></li>
-            <li><a href="google.com">header link two</a></li>
-            <li><a href="google.com">header link three</a></li>
-        </ul>
-    </div>
-    <div class="hero">
-        <div class="title-container">
-            <div class="hero-title">Hamsters for Sale!</div>
-            <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
-            <button class="hero-button">Buy now!</button>
-        </div>
-        <img class="hero-pic" src="./images/hamster-pups.jpeg" alt="Multiple Hamsters">
-    </div>
-    <div class="content-header">Hamsters in Stock</div>
-    <div class="content">
-        <div class="info">
-            <img class="info-img" src="./images/lychee.png" alt="Picture of a Hamster named Lychee">
-            <div class="text">
-                Name: Lychee <br>
-                Age: 6 months <br>
-                Species: Syrian <br>
-                Gender: Male
-            </div>
-        </div>
-        <div class="info">
-            <img class="info-img" src="./images/peanut.png" alt="Picture of a Hamster named Peanut">
-            <div class="text">
-                Name: Peanut <br>
-                Age: 8 months <br>
-                Species: Golden <br>
-                Gender: Female
-            </div>
-        </div>
-        <div class="info">
-            <img class="info-img" src="./images/dwarfhamster.jpeg" alt="Dwarf Hamster">
-            <div class="text">
-                Name: Marshmellow <br>
-                Age: 3 months <br>
-                Species: Dwarf <br>
-                Gender: Female
-            </div>
-        </div>
-        <div class="info">
-            <img class="info-img" src="./images/longtailhamster.jpeg" alt="Longtail Hamster">
-            <div class="text">
-                Name: Pog <br>
-                Age: 7 months <br>
-                Species: Longtail <br>
-                Gender: Male
-            </div>
-    </div>
-    </div>
-    <div class="below-content">
-        <div class="quote">This place has the best quality hamsters and the best customer service! I bought many hamsters here and I always love them.</div>
-        <div class="content-name">- A satisfied customer</div>
-    </div>
-    <div class="call-to-action">
-        <div class="action-border">
-            <div class="action-container">
-                <div class="sign-up-title">Call to action. It's time!</div>
-                <div class="sign-up-now">sign up now</div>
-            </div>
-                <button class="button">Sign up</button>
-        </div>
-    </div>
+   <link rel="stylesheet" href="style.css">
+   <div class="header">
+       <div class="header-container">
+            <img class="header-logo" src="./images/hamster-logo.png" alt="Hamster Logo">
+            <div class="header-logo-text">Hamster Company</div>
+       </div>
+       <ul>
+           <li><a href="google.com">About</a></li>
+           <li><a href="google.com">Shop</a></li>
+           <li><a href="google.com">Contact</a></li>
+       </ul>
+   </div>
+   <div class="hero">
+       <div class="title-container">
+           <div class="hero-title">Hamsters for Sale!</div>
+           <div class="hero-secondary">We offer over 20 different species of hamsters to choose from!</div>
+           <button class="hero-button">Buy now!</button>
+       </div>
+       <img class="hero-pic" src="./images/hamster-pups.jpeg" alt="Multiple Hamsters">
+   </div>
+   <div class="content-header">Hamsters in Stock</div>
+   <div class="content">
+       <div class="info">
+           <img class="info-img" src="./images/lychee.png" alt="Picture of a Hamster named Lychee">
+           <div class="text">
+               Name: Lychee <br>
+               Age: 6 months <br>
+               Species: Syrian <br>
+               Gender: Male
+           </div>
+       </div>
+       <div class="info">
+           <img class="info-img" src="./images/peanut.png" alt="Picture of a Hamster named Peanut">
+           <div class="text">
+               Name: Peanut <br>
+               Age: 8 months <br>
+               Species: Golden <br>
+               Gender: Female
+           </div>
+       </div>
+       <div class="info">
+           <img class="info-img" src="./images/dwarfhamster.jpeg" alt="Dwarf Hamster">
+           <div class="text">
+               Name: Marshmellow <br>
+               Age: 3 months <br>
+               Species: Dwarf <br>
+               Gender: Female
+           </div>
+       </div>
+       <div class="info">
+           <img class="info-img" src="./images/longtailhamster.jpeg" alt="Longtail Hamster">
+           <div class="text">
+               Name: Pog <br>
+               Age: 7 months <br>
+               Species: Longtail <br>
+               Gender: Male
+           </div>
+   </div>
+   </div>
+   <div class="below-content">
+       <div class="quote">This place has the best quality hamsters and the best customer service! I bought many hamsters here and I always love them.</div>
+       <div class="content-name">- A satisfied customer</div>
+   </div>
+   <div class="call-to-action">
+       <div class="action-border">
+           <div class="action-container">
+               <div class="sign-up-title">Call to action. It's time!</div>
+               <div class="sign-up-now">sign up now</div>
+           </div>
+               <button class="button">Sign up</button>
+       </div>
+   </div>
 </body>
-    <div class="footer">
-        <p>Project: Landing Page 1/30/2022 <br>
-        Author: Eric Chi</p>
-    </div>
+   <div class="footer">
+       <p>Project: Landing Page 1/30/2022 <br>
+       Author: Eric Chi</p>
+   </div>
 </body>
 </html>
+
