added container to fix the quote

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
    </div>
    </div>
    <div class="below-content">
-       <div class="quote">This place has the best quality hamsters and the best customer service! I bought many hamsters here and I always love them.</div>
-       <div class="content-name">- A satisfied customer</div>
+       <div class="quote-container">
+            <div class="quote">This place has the best quality hamsters and the best customer service! I bought many hamsters here and I always love them.</div>
+            <div class="content-name">- A satisfied customer</div>
+       </div>   
    </div>
    <div class="call-to-action">
        <div class="action-border">
