fixed wording for call to action

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
    <div class="call-to-action">
        <div class="action-border">
            <div class="action-container">
-               <div class="sign-up-title">Call to action. It's time!</div>
-               <div class="sign-up-now">sign up now</div>
+               <div class="sign-up-title">Sign up for our newsletter!</div>
+               <div class="sign-up-now">Get updates on the latest hamsters we receive in stock.</div>
            </div>
                <button class="button">Sign up</button>
        </div>
